--- a/index.html
+++ b/index.html
@@ -17,15 +17,11 @@
 </head>
 <body class="py-5">
 
-    <div id="app" class="container py-3">
-        <ol v-if="(arrayEmails.leght == 10 )">
-            <li 
-            v-for="(element,index) in arrayEmails" :key="">
-            <span>{{element}}</span>
-
-            </li>
-        </ol>
-    </div>
+    <div id="app">
+        <ul>
+          <li v-for="email in arrayEmails" :key="email">{{ email }}</li>
+        </ul>
+      </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.min.js'
     integrity='sha512-WW8/jxkELe2CAiE4LvQfwm1rajOS8PHasCCx+knHG0gBHt8EXxS6T6tJRTGuDQVnluuAvMxWF4j8SNFDKceLFg=='
     crossorigin='anonymous'></script>
